--- a/build.xml
+++ b/build.xml
@@ -20,17 +20,17 @@
 				</fileset>
 			</classpath>
 		</javac>
-		<javac srcdir="." destdir="${build}" >
-			<classpath>
-				<fileset dir="lib">
-					<include name="**/*.jar" />
-				</fileset>
-			</classpath>
-		</javac>
+		<!--<javac srcdir="." destdir="${build}" >-->
+			<!--<classpath>-->
+				<!--<fileset dir="lib">-->
+					<!--<include name="**/*.jar" />-->
+				<!--</fileset>-->
+			<!--</classpath>-->
+		<!--</javac>-->
 	</target>
 
 	<target name="run" depends="compile">
-		<java classname="test" fork="yes">
+		<java classname="dk.borimino.citygenerator.test" fork="yes">
 			<classpath>
 				<pathelement path="${build}"/>
 				<!--<pathelement path="${lib}"/>-->
